--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,12 @@
 spring.application.name=exchange_rate_portal
+
+spring.datasource.url=jdbc:h2:file:/data/fx_rates
+#spring.datasource.url=jdbc:h2:mem:testdb
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=1234
+spring.datasource.password=1234
+
+spring.h2.console.enabled=true
+
+spring.sql.init.mode=always
+
