--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=exchange_rate_portal
 
-spring.datasource.url=jdbc:h2:file:/data/fx_rates
+spring.datasource.url=jdbc:h2:mem:fx_rates
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=1234
 spring.datasource.password=1234
